--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>utils</artifactId>
+    <artifactId>common</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
