--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <name>map-services</name>
     <description>map-services</description>
     <modules>
-        <module>utils</module>
+        <module>common</module>
         <module>isosurface</module>
         <module>kmz</module>
         <module>geoserver</module>
@@ -26,6 +26,9 @@
            详情见github源码-pom-搜索:`Java compiler`
         -->
         <geotools.version>29.0</geotools.version>
+        <wContour.version>1.7.0</wContour.version>
+        <hutool.version>5.8.16</hutool.version>
+        <jts.version>1.16.1</jts.version>
     </properties>
     <dependencies>
         <dependency>
@@ -305,6 +308,18 @@
                 <groupId>org.geotools</groupId>
                 <artifactId>gt-epsg-wkt</artifactId>
                 <version>${geotools.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.locationtech.jts</groupId>
+                <artifactId>jts-core</artifactId>
+                <version>${jts.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
