--- a/common/pom.xml
+++ b/common/pom.xml
@@ -51,5 +51,18 @@
             <groupId>org.geotools</groupId>
             <artifactId>gt-shapefile</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.geotools.jdbc</groupId>
+            <artifactId>gt-jdbc-postgis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>it.geosolutions</groupId>-->
+        <!--            <artifactId>geoserver-manager</artifactId>-->
+        <!--        </dependency>-->
     </dependencies>
 </project>
