refactor: 重构等值面功能

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -64,5 +64,9 @@
         <!--            <groupId>it.geosolutions</groupId>-->
         <!--            <artifactId>geoserver-manager</artifactId>-->
         <!--        </dependency>-->
+        <dependency>
+            <groupId>com.github.dov-vlaanderen</groupId>
+            <artifactId>geoserver-manager</artifactId>
+        </dependency>
     </dependencies>
 </project>
