--- a/mvt/pom.xml
+++ b/mvt/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>protobuf-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.gislogic</groupId>
