--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,11 @@
                 <artifactId>gt-epsg-wkt</artifactId>
                 <version>${geotools.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.geotools</groupId>
+                <artifactId>gt-flatgeobuf</artifactId>
+                <version>${geotools.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.locationtech.jts</groupId>
                 <artifactId>jts-core</artifactId>
